# EvalForge

./: .gitignore  AGENTS.md  IMPLEMENTATION_STATUS.md  README.md  pyproject.toml
configs/: full.yaml  live_anthropic.yaml  live_openai.yaml  quick.yaml
configs/model_suite/: anthropic_haiku_4_5.yaml  anthropic_opus_4_8.yaml  anthropic_sonnet_5.yaml  openai_gpt_5.yaml  openai_gpt_5_6_sol.yaml  openai_gpt_5_mini.yaml
docs/: CODEBASE_AUDIT.md  EXPERIMENT_METHODOLOGY.md  LIMITATIONS.md  PROJECT_OVERVIEW.md  RELEASE_CHECKLIST.md  REPRODUCIBILITY.md  RESULTS.md  architecture.md  decisions.md  experiment.md  model_suite.md
results/model-suite/: comparison.json  report.html  report.md
scenarios/manual/: bad_deployment_001.yaml  manual_corpus.yaml
scripts/: rescore_from_artifacts.py  run_model_suite.sh
src/evalforge/: __init__.py  cli.py  config.py  serialization.py
src/evalforge/agents/: __init__.py  anthropic_agent.py  base.py  live_tools.py  openai_agent.py  oracle.py  replay.py  scripted.py
src/evalforge/domain/: __init__.py  results.py  scenario.py  trace.py  world.py
src/evalforge/execution/: demo.py  (+4 more)
tests/: __init__.py  conftest.py  support.py
tests/golden/: report_headings.txt  test_report_golden.py
tests/integration/: test_demo.py  test_episode.py  test_failure_classification.py  test_manual_corpus.py
tests/live/: test_openai_live.py
tests/property/: test_simulator_properties.py
tests/unit/: test_bootstrap.py  test_live_only.py  test_model_suite.py
video/: README.md  package-lock.json  package.json
video/src/: Root.tsx  data.ts  theme.ts
(+57 files in other folders)
