[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evalforge"
version = "0.1.0"
description = "Executable stress tests for tool-using AI agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "jinja2>=3.1",
  "pydantic>=2.8",
  "pyyaml>=6.0",
  "typer>=0.12",
]

[project.optional-dependencies]
openai = ["openai>=1.50"]

[dependency-groups]
dev = [
  "hypothesis>=6.100",
  "mypy>=1.11",
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "types-pyyaml>=6.0",
]

[project.scripts]
evalforge = "evalforge.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/evalforge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -m 'not live'"
markers = ["live: requires live provider credentials"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"src/evalforge/reporting/html.py" = ["E501"] # Embedded HTML templates remain readable.

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
